--- a/index.html
+++ b/index.html
@@ -2,10 +2,10 @@
 <html lang="en">
   <head>
     <meta charset="UTF-8" />
-    <link rel="icon" type="image/svg+xml" href="/main03.png" />
+    <link rel="icon" type="image/svg+xml" href="/logo_icon.png" />
     <meta name="viewport" content="width=device-width, initial-scale=1.0" />
     <link href="/src/index.css" rel="stylesheet" />
-    <title>cosmosx</title>
+    <title>GAsP</title>
   </head>
   <body>
     <div id="root"></div>
